fixed alignment on icons

--- a/src/App.css
+++ b/src/App.css
@@ -239,8 +239,13 @@ li span.highlight {
   font-size: 20pt;
 }
 
+.social-icons {
+  align-items: center;
+  margin: 0 auto;
+}
+
 .social-icons a {
-  margin-right: 30px;
+  padding: 15px;
   color: #fff;
   font-size: 20px;
   transition: color 0.3s ease;
